testsuite/tests/rename/should_fail/mc14.stderr

mc14.hs:14:49: error: [GHC-88464]
    Variable not in scope: f :: [a] -> m (t0 a)
